--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=spring_boot_example
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url= jdbc:postgresql://localhost:5432/admin
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+spring.jpa.show-sql=true
+spring.session.store-type=none
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
