--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'com.aisa.test'
+group = 'com.aisa'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -26,8 +26,6 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.5'
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
-
-
 }
 
 tasks.named('test') {
